# LogViewer

./: .gitignore  CMakeFixes.bat  CMakeLists - Kopie.txt  CMakeLists-static.txt  CMakeLists.txt  CMakeLists.txt.bak  LogViewer.pro  LogViewer.pro.user.2fa6805  LogViewer.pro.user.ae7cdc3  LogViewer.rc  Properties.h  acom.reg  conanfile.txt  contextmenudetailview.ui  default.qrc  external  logfilemodel.cpp  logfilemodel.h  logmodel.cpp  logmodel.h  logsqlmodel.cpp  logsqlmodel.h  logupdater.cpp  logupdater.h  logview.cpp  logview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  queryconditions.cpp  queryconditions.h  recource.qrc  settings.cpp  settings.h  signalmapper.h  untitled.ui  utils.cpp  utils.h
assets/: default.qrc
common/: CMakeLists.txt
common/common/: CMakeLists.txt
common/common/include/common/: File.h  Properties.h  StreamHelper.h  common.h  logger.h
common/common/include/common/properties/: Properties.h
common/common/src/: File.cpp  Properties.cpp
common/common/src/logger/: Logger.cpp  cache.h  functionInformation.h  private.h
comon_widgets/: CMakeLists.txt
comon_widgets/NameChooser/: CMakeLists.txt  NameChooser.cpp  NameChooserPlugin.cpp  NameChooserPlugin.h
core/: CMakeLists.txt
core/core/: CMakeLists.txt  settings.cpp  settings_new.cpp  signalmapper.cpp
core/core/gui/: ColorPickerWidget.cpp  MainWindow.cpp  OpenerDialog.cpp  TextColorizerWidget.cpp  colorpicker.cpp  contextmenu.cpp  contextmenudetailview.cpp  contextmenufilterdialog.cpp  dlg_aboutdialog.cpp  finddialog.cpp  logviewcontextmenu.cpp  rowlayoutwidget.cpp  settings_dialog.cpp  settings_generell.cpp  settings_templates.cpp  statusbar.cpp  widget_find.cpp  widget_fontstyle.cpp
core/core/gui/include/gui/: ColorPickerWidget.h  MainWindow.h  OpenerDialog.h  TextColorizerWidget.h  colorpicker.h  commonWidgets.h  contextmenu.h  contextmenudetailview.h  contextmenufilterdialog.h  finddialog.h  findwidget.h  fontstylewidget.h  rowlayoutwidget.h  settings_dialog.h  settings_generell.h  settings_templates.h
core/core/gui/include/gui/logview/: LogView.h  MessageFormatter.h  SyntaxHighLighter.h  TextColorizer.h
core/core/gui/logview/: ColumnToolTip.cpp  DetailView.cpp  LogItemDelegate.cpp  LogView.cpp  LogWindow.cpp  MessageFormatter.cpp  TextColorizer.cpp
core/core/gui/ui/: ColorPickerWidget.ui  Form - untitled  OpenerDialog.ui  TextColorizerWidget.ui  contextmenu.ui  finddialog.ui  findwidget.ui  fontstylewidget.ui  mainwindow.ui  rowlayoutwidget.ui  sample.ui  settings_dialog.ui  settings_generell.ui  settings_templates.ui  statusbar.ui
core/core/include/core/: Properties.h  common.h  settings.h  settings_new.h  signalmapper.h  types.h
core/core/interfaces/: Factory.cpp  logmodel.cpp
core/core/interfaces/include/interfaces/: Factory.h  LogModel.h
core/core/utils/: strptime.cpp  utils.cpp
core/core/utils/include/utils/: utils.h
core/core_test/: CMakeLists.txt
core/core_test/src/: MessageFormatterTest.cpp  main.cpp  testing.cpp
forms/: ColorPickerWidget.cpp  ColorPickerWidget.h  ColorPickerWidget.ui  ColumnizerChooser.cpp  ColumnizerChooser.h  TextColorizerWidget.cpp  TextColorizerWidget.h  TextColorizerWidget.ui  aboutdialog.ui  colorpicker.cpp  colorpicker.h  colorpicker.ui  columnizerwidget.cpp  columnizerwidget.h  columnizerwidget.ui  connections_logstash_widget.cpp  connections_logstash_widget.h  connections_logstash_widget.ui  connectionswidget.cpp  connectionswidget.h  connectionswidget.ui  contextmenudetailview.cpp  contextmenudetailview.h  contextmenudetailview.ui  contextmenufilterdialog.cpp  contextmenufilterdialog.h  contextmenufilterdialog.ui  dlg_querydialog.cpp  finddialog.cpp  findwidget.cpp  findwidget.h  findwidget.ui  generellwidget.cpp  generellwidget.h  generellwidget.ui  logviewcontextmenu.cpp  logviewcontextmenu.h  logviewcontextmenu.ui  patternwidget.ui  qsqlconnectiondialog.ui  (+22 more)
languages/: logviewer_de.ts  (+1 more)
main/: CMakeLists.txt  ColumnToolTip.cpp  DetailView.cpp  LogItemDelegate.cpp  LogWindow.cpp  LoggerHandler.h  TextColorizer.cpp  TextPartColorizer.cpp  logfile_parser.cpp  logfilemodel.cpp  logmodel.cpp  logsqlmodel.cpp  logstashmodel.cpp  logupdater.cpp  logview.cpp  main.cpp  mainwindow.cpp  settings.cpp  signalmapper.cpp  testing.cpp
main/include/: ColumnToolTip.h  Properties.h  TextColorizer.h  common.h  error.h  logfile_parser.h  logfilemodel.h  logmodel.h  logsqlmodel.h  logstashmodel.h  logupdater.h  logview.h  mainwindow.h  mainwindow.ui  queryconditions.h  settings.h  signalmapper.h  testing.h
plugins/common_widgets/common_widgets/: CMakeLists.txt
plugins/common_widgets/common_widgets/include/common_widgets/: NameChooser.h
plugins/common_widgets/common_widgets/src/: NameChooser.cpp  NameChooser.ui  NameChooserPlugin.cpp  NameChooserPlugin.h  QueryFilter.cpp  QueryFilter.ui  QueryFilterPlugin.cpp  QueryFilterPlugin.h  WidgetsCollection.cpp  WidgetsCollection.h
plugins/databaseModel/databaseModel_test/: CMakeLists.txt
plugins/databaseModel/databaseModel_test/src/: main.cpp
plugins/elasticModel/elasticModel/: CMakeLists.txt  ElasticFactory.cpp  ElasticFactory.h  elasticmodel.cpp  elasticmodel.h  private.h  request.cpp  request.h
plugins/elasticModel/elasticModel/gui/: ConnectionWidget.cpp
plugins/elasticModel/elasticModel/gui/include/gui/: ConnectionWidget.h
plugins/elasticModel/elasticModel/gui/ui/: connectionswidget.ui
plugins/elasticModel/elasticModel_test/: CMakeLists.txt
plugins/elasticModel/elasticModel_test/src/: ElasticModelTest.cpp  main.cpp
plugins/fileModel/fileModel/: CMakeLists.txt  Columnizer.cpp  Columnizer.h  LogfilemodelFactory.cpp  LogfilemodelFactory.h  Settings.h  logfile_parser.cpp  logfile_parser.h  logfilemodel.cpp  logfilemodel.h
plugins/fileModel/fileModel/gui/: ColumnizerChooser.cpp  ColumnizerWidget.cpp  GenerellSettings.cpp
plugins/fileModel/fileModel/gui/include/gui/: ColumnizerChooser.h  ColumnizerWidget.h  GenerellSettings.h
plugins/fileModel/fileModel/gui/ui/: ColumnizerChooser.ui  ColumnizerWidget.ui  GenerellSettings.ui
tests/core/: CMakeLists.txt  testing.cpp
(+59 files in other folders)
